# index.js
@@ -8,7 +8,6 @@ import multer from "multer";
 import fs from "fs";
 import cors from "cors";
 
-
 export const JWT_SUPER_SECRET = 'JWT_SUPER_SECRET';
 const MONGO_URI = "mongodb://mongo:mongo@localhost:27017/express?authSource=admin";
 const NODE_EXPRESS_PORT = 4444;
@@ -33,30 +32,30 @@ const storage = multer.diskStorage({
 const upload = multer({ storage });
 
 const app = express();
+
 app.use(express.json());
 app.use(cors());
 app.use('/uploads', express.static('uploads'));
 
 app.get('/', async (req, res) => {  res.json("Main page"); });
 
-app.post('/auth/register', registerValidation, handleValidationErrors, UserController.register);
-app.post('/auth/login', loginValidation, handleValidationErrors, UserController.login)
-app.get('/auth/me',  checkAuth,  UserController.getMe)
+app.post('/api/auth/register', registerValidation, handleValidationErrors, UserController.register);
+app.post('/api/auth/login', loginValidation, handleValidationErrors, UserController.login)
+app.get('/api/auth/me',  checkAuth,  UserController.getMe)
 
-app.get('/tags', PostController.getLastTags);
-
-app.post('/upload', checkAuth, upload.single('image'), (req, res) => {
+app.post('/api/upload', checkAuth, upload.single('image'), (req, res) => {
   res.json({
     url: `/uploads/${req.file.originalname}`,
   });
 });
 
-app.get('/posts', PostController.getAll);
-app.get('/posts/tags', PostController.getLastTags);
-app.get('/posts/:id', PostController.getOne);
-app.post('/posts', checkAuth, postCreateValidation, handleValidationErrors, PostController.create);
-app.delete('/posts/:id', checkAuth, PostController.remove);
-app.patch('/posts/:id',  checkAuth,  postCreateValidation, handleValidationErrors, PostController.update);
+app.get('/api/articles', PostController.getAll);
+app.get('/api/articles/tags', PostController.getLastTags);
+app.get('/api/articles/:id', PostController.getOne);
+app.post('/api/articles', checkAuth, postCreateValidation, handleValidationErrors, PostController.create);
+app.delete('/api/articles/:id', checkAuth, PostController.remove);
+app.patch('/api/articles/:id',  checkAuth,  postCreateValidation, handleValidationErrors, PostController.update);
+app.get('/api/articles/tags', PostController.getLastTags);
 
 app.listen(process.env.PORT || NODE_EXPRESS_PORT, (err) => {
   if (err) {
